<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/c"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tvBrackets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/brackets"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tvBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/back"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tvDivide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/divide"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/_7"
            android:textColor="@color/darkGrey"
            android:textSize="30sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/_8"
            android:textColor="@color/darkGrey"
            android:textSize="30sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/_9"
            android:textColor="@color/darkGrey"
            android:textSize="30sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tvMultiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/multiply"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/_4"
            android:textColor="@color/darkGrey"
            android:textSize="30sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/_5"
            android:textColor="@color/darkGrey"
            android:textSize="30sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/_6"
            android:textColor="@color/darkGrey"
            android:textSize="30sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tvMinus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/minus"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/_1"
            android:textColor="@color/darkGrey"
            android:textSize="30sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/_2"
            android:textColor="@color/darkGrey"
            android:textSize="30sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/_3"
            android:textColor="@color/darkGrey"
            android:textSize="30sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tvPlus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/plus"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv00"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/_00"
            android:textColor="@color/darkGrey"
            android:textSize="30sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/_0"
            android:textColor="@color/darkGrey"
            android:textSize="30sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tvDot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/dot"
            android:textColor="@color/darkGrey"
            android:textSize="30sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tvEquals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/orange"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/equals"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="normal" />
    </LinearLayout>

</LinearLayout>